Ant build adjustments for Eclipse Luna 4.4.3 / Win64

--- a/testng-eclipse-update-site/autobuild.site.properties
+++ b/testng-eclipse-update-site/autobuild.site.properties
@@ -1,8 +1,8 @@
 # Plugin and feature version.
-version=5.8.0.4a
+version=5.8.0.5a
 
 # Adjust for the location of eclipse on the lccal machine.
-eclipse.dir=/opt/eclipse
+eclipse.dir=C:\\dev\\eclipse-pde-44
 
 
 # There would usually be no need to edit these properties.
